# GroupProject

./: .gitignore  pyproject.toml
.github/workflows/: action_simple.yml
pages/: locators.py
report/: report.html
tests/: test_TC_011_05_06_Add_into_cart.py  test_cart_page.py  test_login_page.py  test_place_order.py  test_products_page.py
tests/report/: report.html
