[tool.poetry]
name = "groupproject"
version = "0.1.0"
description = ""
authors = ["”Natalia <n.i.tsyrelchuk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
black = "^22.10.0"
selenium = "^4.6.0"
pytest = "^7.2.0"
flake8 = "^5.0.4"
webdriver-manager = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

